pamc/src/tests/integration/should_succeed/multi_file/mod.rs
use super::*;

mod no_warnings;
